Fix buttons size and alignement

--- a/www/src/css/main.css
+++ b/www/src/css/main.css
@@ -511,6 +511,14 @@ svg {
     max-width: 45rem;
 }
 
+.config-button{
+    display: flex;
+}
+
+.config-button svg{
+    margin-right: 0.5rem;
+}
+
 .config .category {
     min-height: 2.5rem;
     font-weight: 800;
