--- a/www/src/css/themes.css
+++ b/www/src/css/themes.css
@@ -242,12 +242,12 @@
         background-color: rgba(255, 255, 255, 0.1);
     }
 
-    .config-right button {
+    .config-button {
         background-color: rgb(99, 102, 241);
         color: white;
     }
 
-    .config-right button:hover {
+    .config-button:hover {
         background-color: rgba(12, 74, 110, 0.7);
     }
 
